--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,8 @@ RACK_ENV=$RAILS_ENV
 
 # Secret token (generate one with "rake secret")
 SECRET_KEY_BASE=
+
+# Mailer options (needed for ActiveMailer)
+# MAILER_URL: url used by ActionMailer views (include the sub-uri if needed)
+MAILER_SENDER=
+MAILER_URL=
