Limit specialties through environment variable

--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,6 @@ SECRET_KEY_BASE=
 # MAILER_URL: url used by ActionMailer views (include the sub-uri if needed)
 MAILER_SENDER=
 MAILER_URL=
+
+#Predefined specialties
+SPECIALTIES="Orthopedics:Opthamology:Cardiology"
