Limit ailments through environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,6 @@ MAILER_URL=
 
 #Predefined specialties
 SPECIALTIES="Orthopedics:Opthamology:Cardiology"
+
+#Predefined ailments
+AILMENTS="broken bones:eye trouble:heart disease"
