--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@ RACK_ENV=$RAILS_ENV
 
 # Secret token (generate one with "rake secret")
 SECRET_KEY_BASE=
+DEVISE_SECRET=
 
 # Mailer options (needed for ActiveMailer)
 # MAILER_URL: url used by ActionMailer views (include the sub-uri if needed)
