Send email on doctor request

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,6 @@ DEVISE_SECRET=
 # MAILER_URL: url used by ActionMailer views (include the sub-uri if needed)
 MAILER_SENDER=
 MAILER_URL=
+
+# App Support
+SUPPORT_EMAIL=
